@@ -1,5 +1,6 @@
 squashfs-broadcom/bat-unsquashfs-broadcom	usr/bin
 squashfs-openwrt/bat-unsquashfs-openwrt		usr/bin
+squashfs-ddwrt/bat-unsquashfs-ddwrt		usr/bin
 squashfs-ralink/squashfs3.2-r2/squashfs-tools/bat-unsquashfs-ralink	usr/bin
 squashfs-atheros/squashfs3.3/squashfs-tools/bat-unsquashfs-atheros	usr/bin
 squashfs4.2/squashfs-tools/bat-unsquashfs42	usr/bin
