@@ -1,6 +1,7 @@
 2012-01-16
 * add lrzip unpacking
 * enable cramfs checking by default
+* add another squashfs variant (from DD-WRT)
 
 2012-01-14
 * prepare for 6.0 release
